--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -14,7 +14,8 @@
         android:layout_marginTop="28dp"
         android:text="@string/search"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_date" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_date"
+        android:layout_marginLeft="84dp" />
 
     <TextView
         android:id="@+id/textView"
@@ -24,7 +25,8 @@
         android:layout_marginTop="16dp"
         android:text="@string/departure"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="16dp" />
 
     <TextView
         android:id="@+id/text_destination"
@@ -34,7 +36,8 @@
         android:layout_marginTop="12dp"
         android:text="@string/destination"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_departure" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_departure"
+        android:layout_marginLeft="16dp" />
 
     <TextView
         android:id="@+id/text_date"
@@ -44,7 +47,8 @@
         android:layout_marginTop="12dp"
         android:text="@string/date"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_destination" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_destination"
+        android:layout_marginLeft="16dp" />
 
     <EditText
         android:id="@+id/edit_departure"
@@ -56,7 +60,8 @@
         android:hint="@string/departure"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:layout_marginLeft="16dp" />
 
     <EditText
         android:id="@+id/edit_destination"
@@ -79,18 +84,12 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/date"
-
-        android:inputType="number"
-        android:text=""
+        android:clickable="true"
+        android:editable="false"
+        android:inputType="date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_date"
-        tools:ignore="HardcodedText" />
-=======
-        android:inputType="textPersonName"
-        android:text=""
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_date"
-        tools:ignore="HardcodedText"
+        tools:focusable="false"
         android:layout_marginLeft="16dp" />
->>>>>>> f88cd445089209dd8f85b6115bc6913bf0f7084d
+
 </android.support.constraint.ConstraintLayout>
