--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -82,14 +82,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:focusable="false"
         android:ems="10"
         android:hint="@string/date"
-        android:clickable="true"
-        android:editable="false"
         android:inputType="date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_date"
-        tools:focusable="false"
-        android:layout_marginLeft="16dp" />
+        />
 
 </android.support.constraint.ConstraintLayout>
